# DesktopAppCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_linux.sh  setup_Linux.sh  setup_Windows.sh  setup_boost.sh  setup_macOS.sh
.github/workflows/: build.yaml
include/: FoobarApp.h  FoobarFrame.h  PreferencesDialog.h  config.h.in
lib/: CMakeLists.txt
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
share/Resources/: Foobar.fbp  Foobar.xrc
src/: CMakeLists.txt  Foobar.cpp  FoobarApp.cpp  FoobarFrame.cpp  PreferencesDialog.cpp
